--- a/react_django/Register_controller/frontend/package.json
+++ b/react_django/Register_controller/frontend/package.json
@@ -26,6 +26,7 @@
     "nunjucks": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2"
+    "react-router-dom": "^6.2.2",
+    "react-table": "^7.7.0"
   }
 }
